[package]
name = "tree-sitter-agda"
description = "Agda grammar for tree-sitter"
version = "1.3.1"
authors = ["Lua Ting-Gian"]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "agda"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-agda"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "~1.0.83"
