[package]
name = "tree-sitter-jsdoc"
description = "JSDoc grammar for tree-sitter"
version = "0.20.0"
authors = [
	"Max Brunsfeld <maxbrunsfeld@gmail.com>",
	"Amaan Qureshi <amaanq12@gmail.com>"
]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "jsdoc"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-javascript"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "~1.0.83"
