[package]
name = "tree-sitter-julia"
description = "julia grammar for the tree-sitter parsing library"
version = "0.20.0"
keywords = ["incremental", "parsing", "julia"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-julia"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
