[package]
name = "tree-sitter-regex"
description = "Regex grammar for the tree-sitter parsing library"
version = "0.20.0"
keywords = ["incremental", "parsing", "regex"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-javascript"
license = "MIT"
authors = ["Max Brunsfeld <maxbrunsfeld@gmail.com>"]
edition = "2018"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20.10"

[build-dependencies]
cc = "1.0"
