[package]
name = "tree-sitter-tsq"
description = "tsq grammar for the tree-sitter parsing library"
version = "0.19.0"
authors = ["Douglas Creager <dcreager@dcreager.net>"]
keywords = ["incremental", "parsing", "tsq"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-tsq"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.19"

[build-dependencies]
cc = "1.0"
